--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@fontsource/inter": "^5.0.18",
     "@fontsource/nunito-sans": "^5.0.13",
     "@fontsource/public-sans": "^5.0.18",
+    "@hello-pangea/dnd": "^16.6.0",
     "@hookform/resolvers": "^3.6.0",
     "@iconify/react": "^5.0.1",
     "@mui/lab": "^5.0.0-alpha.170",
@@ -43,17 +44,23 @@
     "@reduxjs/toolkit": "^2.2.7",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.7.3",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "framer-motion": "^11.2.10",
+    "iconsax-react": "^0.0.8",
     "next": "^14.2.4",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.5",
+    "react-image-crop": "^11.0.6",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "simplebar-react": "^3.2.5",
     "stylis": "^4.3.2",
     "stylis-plugin-rtl": "^2.1.1",
+    "yup": "^1.4.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
