--- a/package.json
+++ b/package.json
@@ -47,15 +47,19 @@
     "axios": "^1.7.3",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
+    "formik": "^2.4.6",
     "framer-motion": "^11.2.10",
     "iconsax-react": "^0.0.8",
     "next": "^14.2.4",
+    "notistack": "^3.0.1",
     "nprogress": "^0.2.0",
+    "numeral": "^2.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.5",
     "react-image-crop": "^11.0.6",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "simplebar-react": "^3.2.5",
@@ -69,8 +73,10 @@
     "@types/autosuggest-highlight": "^3.2.3",
     "@types/node": "^20.14.2",
     "@types/nprogress": "^0.2.3",
+    "@types/numeral": "^2.0.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-lazy-load-image-component": "^1.6.4",
     "@types/stylis": "^4.2.6",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
