--- a/package.json
+++ b/package.json
@@ -40,18 +40,18 @@
     "@mui/material": "^5.15.20",
     "@mui/material-nextjs": "^5.15.11",
     "@mui/x-data-grid": "^7.7.0",
-    "@mui/x-date-pickers": "^7.7.0",
+    "@mui/x-date-pickers": "^7.12.0",
     "@mui/x-tree-view": "^7.7.0",
     "@reduxjs/toolkit": "^2.2.7",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.7.3",
     "date-fns": "^3.6.0",
-    "dayjs": "^1.11.11",
+    "date-fns-tz": "^1.1.1",
+    "dayjs": "^1.11.12",
     "formik": "^2.4.6",
     "framer-motion": "^11.2.10",
     "iconsax-react": "^0.0.8",
     "next": "^14.2.4",
-    "notistack": "^3.0.1",
     "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
     "react": "^18.3.1",
@@ -63,6 +63,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "simplebar-react": "^3.2.5",
+    "sonner": "^1.5.0",
     "stylis": "^4.3.2",
     "stylis-plugin-rtl": "^2.1.1",
     "yup": "^1.4.0",
